--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="zjl.example.com.ndktest">
+    <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="26"/>
 
     <application
         android:allowBackup="true"
